[package]
name = "wrap_functime"
version = "0.1.0"
authors = ["renlord <git[at]renlord.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.72", features = [ "full", "parsing" ]}
quote = { version = "1.0.9"}

[lib]
proc_macro = true
