[package]
name = "wrap_functime"
version = "0.1.0"
authors = ["renlord <git[at]renlord.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.72", features = [ "full", "parsing" ]}
quote = { version = "1.0.9"}
lazy_static = "^1.4.0"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
statsd = "^0.14.1"

[[test]]
name = "tests"
path = "tests/progress.rs"

[lib]
proc_macro = true
